@@ -1,6 +1,4 @@
 /* $Id$ */
-#define _BSD_SOURCE 1
-#define _SVID_SOURCE 1
 #include "matchmaker.h"
 #include <synce_log.h>
 #include <synce_ini.h>
