@@ -1,7 +1,6 @@
 /*
  * Extract data from .rsrc section of PE file
  */
-#define _BSD_SOURCE 1
 #ifdef HAVE_CONFIG_H 
 #include "config.h"
 #endif
